--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
----
-layout: default
-title: RH, xXx
----
-<div class="blurb">
-	<h1>Hi there, I'm RH!</h1>
-	<p>I'm best known as <em>italics</em> D. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Ridwan Hassen</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Ridwan!</h1>
+				<p>info <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:ridwan.hassen.15@gmail.com">email</a></li>
+        		<li><a href="https://github.com/ridcode">github.com/ridcode</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
+4
