--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/resume">Resume</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Ridwan!</h1>
-				<p>info <a href="/about">Read more about my life...</a></p>
+				<p> More info <a href="/about">Follow my blog here:  </a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
@@ -26,4 +26,3 @@
 		</footer>
 	</body>
 </html>
-4
